--- a/scss/components/header.scss
+++ b/scss/components/header.scss
@@ -1,17 +1,17 @@
 .header {
     position: absolute;
     width: 100%;
-    padding: 10px 0;
+    padding: rem(10px) 0;
     z-index: 9999;
   }
   .header__center {
     flex: 1;
   }
   .header__left {
-    padding-right: 65px;
+    padding-right: rem(65px);
   }
 
   .logo__link {
     display: block;
-    width: 100px;
+    width: rem(100px);
   }
