--- a/scss/components/primary-menu.scss
+++ b/scss/components/primary-menu.scss
@@ -1,4 +1,8 @@
 .primary-menu {
+    @include tablets {
+      display: none;;
+    }
+
     &__list {
       display: flex;
       justify-content: space-between;
