--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,3 +21,6 @@
 @import './components/socials';
 @import './components/map';
 @import './components/buttons';
+@import './components/hamburger-menu';
+@import './components/hamburger-menu-link';
+@import './components/video-bg';
