--- a/css/components/header.css
+++ b/css/components/header.css
@@ -1,7 +1,7 @@
 .header {
   position: absolute;
   width: 100%;
-  padding: 10px 0;
+  padding: rem(10px) 0;
   z-index: 9999;
 }
 
@@ -10,10 +10,10 @@
 }
 
 .header__left {
-  padding-right: 65px;
+  padding-right: rem(65px);
 }
 
 .logo__link {
   display: block;
-  width: 100px;
+  width: rem(100px);
 }
