--- a/css/components/pagination.css
+++ b/css/components/pagination.css
@@ -1,18 +1,18 @@
 .pagination {
   z-index: 99999;
   position: fixed;
-  top: 10%;
+  top: 20%;
   right: 5%;
 }
 .pagination__item {
-  padding-bottom: 20px;
+  padding-bottom: rem(20px);
 }
 .pagination__item--active a:after {
   content: "";
   position: absolute;
   border: 1px solid white;
-  width: 16px;
-  height: 16px;
+  width: rem(16px);
+  height: rem(16px);
   border-radius: 50%;
   top: 50%;
   left: 50%;
