--- a/scss/components/about.scss
+++ b/scss/components/about.scss
@@ -5,7 +5,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
-    padding: 40px 0;
+    padding: rem(40px) 0;
     position: relative;
     background-color: #000;
     @include theme($dark-theme: true);
@@ -19,36 +19,70 @@
       background-position: center;
       top: 0;
       opacity: 0.5;
+
     }
   
     &__content {
       flex: 1;
       display: flex;
       align-items: center;
+      height: 100%;
+
+      @include tablets {
+        justify-content: center;
+        align-content: center;
+        flex-wrap: wrap;
+        max-width: 80%;
+      }
     }
   
     &__text {
-      font-size: 65px;
+      font-size: rem(65px);
       color: white;
+
+      @include tablets {
+        font-size: 3rem;
+      }
     }
 
     &__desc {
       flex: 1 1 50%;
+
+      @include tablets {
+        text-align: center;
+      }
     }
   
     &__image {
-      padding: 0px 35px 70px 35px;
+      padding: rem(0px) rem(35px) rem(70px) rem(35px);
       background-image: url('/icons/drops.svg');
       background-size: contain;
       background-position: 100% 25%;
       background-repeat: no-repeat;
       flex: 1 1 50%;
+
+      @include tablets {
+        padding: 0;
+        flex: 0;
+        max-height: 50%;
+        min-width: 60%;
+      }
+    }
+
+    &__photo {
+      width: auto;
+      max-width: 100%;
+      max-height: 100%;
     }
 
   &__arrow-down {
     position: absolute;
-    bottom: 20px;
+    bottom: rem(20px);
     left: 50%;
     transform: translateX(-50%);
+
+    @include tablets {
+      bottom: -2rem;
+    }
   }
   }
