--- a/scss/components/advantages.scss
+++ b/scss/components/advantages.scss
@@ -12,23 +12,42 @@
       display: flex;
       text-align: center;
       justify-content: space-between;
+
+      @include mobile {
+        flex-wrap: wrap;
+      }
     }
   
     &__item {
       width: calc(100% / 3 - 20px);
       @include desc__text;
+      margin-bottom: rem(30px);
+
+      @include mobile {
+        width: 100%;
+        display: flex;
+        text-align: left;
+      }
     }
   
     &__title {
-      font-size: 24px;
+      font-size: rem(24px);
       line-height: 1.25;
-      margin-bottom: 25px;
+      margin-bottom: rem(25px);
+
+      @include mobile {
+        margin-bottom: 1rem;
+      }
     }
   
     &__icon {
-      min-height: 110px;
-    max-width: 60px;
-    margin: auto;
+      max-width: rem(100px);
+      margin: auto;
+      margin-bottom: rem(20px);
 
+      @include mobile {
+        margin-right: rem(20px);
+        max-width: 25%;
+      }
     }
 }
