--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -18,6 +18,10 @@
         top: 0;
         bottom: 0;
         max-width: 55%;
+
+        @include tablets {
+            max-width: 100%;
+        }
     }
 
     &__title-container {
@@ -27,7 +31,7 @@
         background-size: cover;
         display: flex;
         align-items: flex-end;
-        padding: 40px 20px;
+        padding: rem(40px) rem(20px);
         position: relative;
 
         &:after {
@@ -46,14 +50,22 @@
                 background-image: $bg;
             }
         }
+
+        @include tablets {
+            padding: rem(40px) .5rem;
+        }
     }
 
     &__title {
-        font-size: 40px;
+        font-size: rem(40px);
         writing-mode: vertical-lr;
         transform: rotate(180deg);
         line-height: 1;
         z-index: 5;
+
+        @include tablets {
+            font-size: 1.5rem;
+        }
     }
 
     &__list {
@@ -68,13 +80,17 @@
 
             .menu-section__text {
                 width: 100%;
-                padding: 60px 35px;
+                padding: rem(60px) rem(35px);
+
+                @include tablets {
+                    padding: rem(20px) rem(20px);
+                }
             }
         }
     }
 
     &__text {
-        width: 0px;
+        width: rem(0px);
         background-color: #0000008f;
     }
 
@@ -84,5 +100,4 @@
     position: absolute;
     top: 5%;
     left: 5%;
-    z-index: 10;
 }
