--- a/scss/components/order.scss
+++ b/scss/components/order.scss
@@ -1,6 +1,15 @@
 .order {
   display:flex;
 
+  @include tablets {
+    flex-wrap: wrap;
+    width: 70%;
+  }
+
+  @include mobile {
+    width: 100%;
+  }
+
   &--section {
     background-color: #000;
     background-image: url('/img/bg-order.jpg');
@@ -12,21 +21,34 @@
 
   &__column {
     flex: 1 1 50%;
-    margin-right: 20px;
+    margin-right: rem(20px);
 
     &:last-child {
-      margin-right: 20px;
+      margin-right: rem(20px);
+
+      @include tablets {
+        margin-right: 0;
+      }
     }
+
+    @include tablets {
+      margin-right: 0;
+    }
+
   }
 
   &__row {
-    margin-bottom: 14px;
+    margin-bottom: rem(14px);
     display: flex;
+
+    @include mobile {
+      justify-content: center;
+    }
   }
 
   &__block {
     flex: 1;
-    margin-right: 20px;
+    margin-right: rem(20px);
     color: inherit;
   
     &:last-child {
@@ -40,7 +62,7 @@
       .order__input {
         width: auto;
         position: absolute;
-        left: -9999px;
+        left: rem(-9999px);
       }
     }
   }
@@ -48,7 +70,7 @@
 
   &__input {
     width: 100%;
-    padding: 8px 21px;
+    padding: rem(8px) rem(21px);
     border: 2px solid transparent;
     border-radius: 4px;
 
@@ -66,6 +88,11 @@
 }
 
 .order__block--radio {
+
+  @include mobile {
+    flex: none;
+  }
+
   .order__input:checked+.order__fake-button:before {
       width: 7px;
       height: 7px;
@@ -78,13 +105,13 @@
     background-color: white;;
     justify-content: center;
     align-items: center;
-    margin-right: 10px;
+    margin-right: rem(10px);
 
     &:before {
       content: " ";
       display: flex;
-      width: 0px;
-      height: 0px;
+      width: rem(0px);
+      height: rem(0px);
       border-radius: 50%;
       background-color: $orange;
     }
@@ -101,6 +128,10 @@
   display: flex;
   align-items: center;
 
+  @include mobile {
+    flex: none;
+  }
+
   .order__input:checked+.order__fake-button:before {
     background-image: url('/icons/check.svg');
   }
@@ -108,24 +139,24 @@
   .order__input {
     width: auto;
     position: absolute;
-    left: -9999px;
+    left: rem(-9999px);
   }
 
   .order__fake-button {
     display: flex;
-    width: 15px;
-    height: 15px;
+    width: rem(15px);
+    height: rem(15px);
     background-color: white;;
     justify-content: center;
     align-items: center;
-    margin-right: 10px;
+    margin-right: rem(10px);
     border-radius: 0;
 
     &:before {
       content: " ";
       display: flex;
-      width: 12px;
-      height: 12px;
+      width: rem(12px);
+      height: rem(12px);
     }
   }
 }
