--- a/scss/components/pagination.scss
+++ b/scss/components/pagination.scss
@@ -1,11 +1,11 @@
 .pagination {
     z-index: 99999;
     position: fixed;
-    top: 10%;
+    top: 20%;
     right: 5%;
   
     &__item {
-      padding-bottom: 20px;
+      padding-bottom: rem(20px);
   
       &--active {
   
@@ -13,8 +13,8 @@
           content: "";
           position: absolute;
           border: 1px solid white;
-          width: 16px;
-          height: 16px;
+          width: rem(16px);
+          height: rem(16px);
           border-radius: 50%;
           top: 50%;
           left: 50%;
