--- a/scss/components/socials.scss
+++ b/scss/components/socials.scss
@@ -2,15 +2,19 @@
     display: flex;
     justify-content: flex-end;
 
+    @include mobile {
+        justify-content: center;
+    }
+
     &__list {
         display: flex;
     }
 
     &__item {
-        margin-right: 20px;
+        margin-right: rem(20px);
 
         &:last-child {
-            margin-right: 0px;
+            margin-right: rem(0px);
         }
     }
 
