--- a/scss/components/team.scss
+++ b/scss/components/team.scss
@@ -19,21 +19,31 @@
     background-color: #2f3234d4;
     align-content: center;
     align-items: center;
-    padding: 0 80px;
+    padding: rem(0px) rem(80px);
+
+    @include tablets {
+      width: 100%;
+      text-align: center;
+      justify-content: center;
+    }
   }
 
   &--title {
-    font-size: 24px;
+    font-size: rem(24px);
     line-height: 1.25;
-    margin-bottom: 25px;
+    margin-bottom: rem(25px);
   }
 
   &__item {
-    margin-bottom: 40px;
+    margin-bottom: 1.5rem;
     display: flex;
     align-items: center;
     transition: all 0.3s;
     flex-wrap: wrap;
+
+    @include tablets {
+      justify-content: center;
+    }
 
     &:before {
       content: "";
@@ -58,7 +68,8 @@
       }
 
       .team__content {
-        min-height: 100px;
+        height: auto;
+        padding-top: rem(20px);
       }
     }
 
@@ -66,22 +77,37 @@
 
   &__content {
     display: flex;
-    margin-top: 20px;
     height: 0;
     overflow: hidden;
+
+    @include tablets {
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+    }
   }
 
   &__name {
     width: 95%;
+
+    @include tablets {
+      width: auto;
+      font-size: 1.8rem;
+    }
   }
 
   &__photo {
     width: 100%;
-    max-width: 100px;
-    height: 100px;
+    max-width: rem(100px);
+    height: rem(100px);
     border-radius: 50%;
     overflow: hidden;
-    margin-right: 18px;
+    margin-right: rem(18px);
+
+    @include tablets {
+      margin-right: 0;
+      margin-bottom: rem(18px);
+    }
   }
   &__img {
     height: 100%;
@@ -90,16 +116,17 @@
   }
 
   &__about {
-    font-size: 14px;
+    font-size: rem(14px);
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     align-content: center;
+    max-width: rem(220px);
   }
 
   &__post {
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: rem(10px);
     width: 100%;
   }
 
