--- a/scss/settings/mixins.scss
+++ b/scss/settings/mixins.scss
@@ -1,3 +1,7 @@
+@function rem($px) {
+  @return $px / 14px + 0rem;
+}
+
 @mixin theme ($dark-theme: true) {
     @if $dark-theme {
       color: white;
@@ -16,19 +20,25 @@
   @mixin btn {
     background-color: $orange;
     color: inherit;
-    padding: 12px 15px;
+    padding: rem(12px) rem(15px);
     border-radius: 4px;
     transition: all 0.3s;
   }
   
   @mixin desc__text {
     font-weight: lighter;
-    font-size: 14px;
+    font-size: rem(14px);
     line-height: 1.6;
 }
 
-$number-bg: (
-  1: url('/img/bg-menu-1.jpg'),
-  2: url('/img/bg-menu-2.jpg'),
-  3: url('/img/bg-menu-3.jpg')
-);
+@mixin tablets {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin mobile {
+  @media screen and (max-width: 480px) {
+    @content;
+  }
+}
