--- a/scss/components/footer.scss
+++ b/scss/components/footer.scss
@@ -22,6 +22,10 @@
 
     .container {
         z-index: 100;
+
+        @include mobile {
+            flex-direction: column;
+        }
     }
 
     &__svg {
