--- a/css/main.css
+++ b/css/main.css
@@ -379,6 +379,15 @@ table {
   width: 7.1428571429rem;
 }
 
+.header__right .btn {
+  margin-top: 0;
+}
+@media screen and (max-width: 768px) {
+  .header__right .btn {
+    margin-right: 1.4285714286rem;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .primary-menu {
     display: none;
@@ -473,14 +482,18 @@ table {
   .about__image {
     padding: 0;
     flex: 0;
-    max-height: 50%;
+    height: 50%;
     min-width: 60%;
+    display: flex;
+    background-position: center;
   }
 }
 .about__photo {
   width: auto;
-  max-width: 100%;
   max-height: 100%;
+  display: block;
+  margin: auto;
+  max-width: 100%;
 }
 .about__arrow-down {
   position: absolute;
@@ -1084,6 +1097,11 @@ table {
 .footer .container {
   z-index: 100;
 }
+@media screen and (max-width: 480px) {
+  .footer .container {
+    flex-direction: column;
+  }
+}
 .footer__svg {
   margin-right: 0.3571428571rem;
 }
@@ -1191,81 +1209,62 @@ table {
 }
 
 .hamburger-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(47, 50, 52, 0.99);
-  align-items: center;
-  justify-content: center;
-  z-index: 100;
-  display: none;
-  transition: opacity 0.3s;
-}
-.hamburger-menu_visible {
+  width: 30px;
+  height: 30px;
   display: flex;
-  opacity: 0;
-}
-
-.hamburger-menu__logo {
-  position: absolute;
-  top: 0.7142857143rem;
-  left: 2.1428571429rem;
-}
-
-.hamburger-menu__close {
-  position: absolute;
-  right: 1.0714285714rem;
-  top: 1.0714285714rem;
-  width: 1.2857142857rem;
-  height: 1.2857142857rem;
-  padding: 1.0714285714rem;
-  box-sizing: content-box;
-}
-.hamburger-menu__close:hover .hamburger-menu__close-icon use {
-  fill: #fff;
-}
-
-.hamburger-menu__close-icon {
-  width: 100%;
-  height: 100%;
-}
-.hamburger-menu__close-icon use {
-  fill: #c1c2c2;
-  transition: fill 0.3s;
-}
-
-.hamburger-menu-link {
-  vertical-align: middle;
-  position: relative;
-  height: 1.5714285714rem;
   align-items: center;
-  margin-left: 2.1428571429rem;
-  display: none;
+  overflow: hidden;
+  transition: all 1s;
 }
-@media screen and (max-width: 768px) {
-  .hamburger-menu-link {
-    display: inline-flex;
-  }
-}
-
-.hamburger-menu-link__bars, .hamburger-menu-link__bars:before, .hamburger-menu-link__bars:after {
-  background: #fff;
-  width: 1.7142857143rem;
-  height: 0.3571428571rem;
-  border-radius: 0.2142857143rem;
-}
-.hamburger-menu-link__bars:before, .hamburger-menu-link__bars:after {
-  content: "";
-  display: block;
-  position: absolute;
-}
-.hamburger-menu-link__bars:before {
+.hamburger-menu:hover .hamburger-menu__link:after {
+  transform: rotate(-45deg);
+  transition: all 0.3s;
   top: 0;
 }
-.hamburger-menu-link__bars:after {
-  bottom: 0;
+.hamburger-menu:hover .hamburger-menu__link:before {
+  transform: rotate(45deg);
+  transition: all 0.3s;
+  top: 0;
+}
+.hamburger-menu:hover .hamburger-menu__line {
+  transform: translateX(50px);
+}
+.hamburger-menu__line {
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: white;
+  border-radius: 4px;
+  position: relative;
+  transition: all 0.3s;
+}
+.hamburger-menu__link {
+  display: block;
+  width: 100%;
+  height: 5px;
+  border-radius: 4px;
+  position: relative;
+  transition: all 0.3s;
+}
+.hamburger-menu__link:before {
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: white;
+  border-radius: 4px;
+  position: absolute;
+  top: -10px;
+  left: 0;
+}
+.hamburger-menu__link:after {
+  content: "";
+  width: 100%;
+  height: 5px;
+  background-color: white;
+  border-radius: 4px;
+  position: absolute;
+  top: 10px;
+  left: 0;
 }
 
 .video-bg {
