--- a/scss/components/hamburger-menu.scss
+++ b/scss/components/hamburger-menu.scss
@@ -1,52 +1,69 @@
 .hamburger-menu {
-	position: fixed;
-	top: 0;
-	left: 0;
-	right: 0;
-	bottom: 0;
-	background: rgba(#2f3234, .99);
+	width: 30px;
+	height: 30px;
+	display: flex;
 	align-items: center;
-	justify-content: center;
-	z-index: 100;
-	display: none;
-	transition: opacity .3s;
-
-	&_visible {
-		display: flex;
-		opacity: 0;
-	}
-}
-
-.hamburger-menu__logo {
-	position: absolute;
-	top: rem(10px);
-	left: rem(30px);
-}
-
-.hamburger-menu__close {
-	position: absolute;
-	right: rem(15px);
-	top: rem(15px);
-	width: rem(18px);
-	height: rem(18px);
-	padding: rem(15px);
-	box-sizing: content-box;
+	overflow: hidden;
+	transition: all 1s;
 
 	&:hover {
-		.hamburger-menu__close-icon {
-			use {
-				fill: #fff;
-			}
+		.hamburger-menu__link:after {
+			transform: rotate(-45deg);
+			transition: all .3s;
+			top: 0;
+		}
+
+		.hamburger-menu__link:before {
+			transform: rotate(45deg);
+			transition: all .3s;
+			top: 0;
+		}
+
+		.hamburger-menu__line {
+			transform: translateX(50px);
 		}
 	}
-}
 
-.hamburger-menu__close-icon {
-	width: 100%;
-	height: 100%;
+		&__line{
+			display: block;
+			width: 100%;
+			height: 5px;
+			background-color: white;
+			border-radius: 4px;
+			position: relative;
+			transition: all .3s;
+		}
 
-	use {
-		fill: #c1c2c2;
-		transition: fill .3s;
-	}
+		&__link {
+			display: block;
+			width: 100%;
+			height: 5px;
+			border-radius: 4px;
+			position: relative;
+			transition: all .3s;
+			
+
+			&:before {
+				content: "";
+				width: 100%;
+				height: 5px;
+				background-color: white;
+				border-radius: 4px;
+				position: absolute;
+				top: -10px;
+				left: 0;
+			}
+
+			&:after {
+				content: "";
+				width: 100%;
+				height: 5px;
+				background-color: white;
+				border-radius: 4px;
+				position: absolute;
+				top: 10px;
+				left: 0;
+			}
+		}
+
 }
