--- a/scss/components/about.scss
+++ b/scss/components/about.scss
@@ -47,6 +47,7 @@
 
     &__desc {
       flex: 1 1 50%;
+      line-height: 1;
 
       @include tablets {
         text-align: center;
@@ -64,9 +65,9 @@
       @include tablets {
         padding: 0;
         flex: 0;
-        height: 50%;
-        min-width: 60%;
+        min-width: 85%;
         display: flex;
+        margin-bottom: 2rem;
         background-position: center;
       }
     }
