--- a/scss/components/menu.scss
+++ b/scss/components/menu.scss
@@ -17,10 +17,12 @@
         right: 0;
         top: 0;
         bottom: 0;
-        max-width: 55%;
 
         @include tablets {
+            width: 100%;
             max-width: 100%;
+            display: flex;
+            justify-content: flex-end;
         }
     }
 
@@ -78,13 +80,29 @@
 
         &--active {
 
+            @include tablets {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                right: 0;
+                display: flex;
+                justify-content: flex-end;
+                z-index: 99999;
+            }
+
             .menu-section__text {
                 width: 100%;
                 padding: rem(60px) rem(35px);
+                max-width: rem(540px);
 
                 @include tablets {
                     padding: rem(20px) rem(20px);
                 }
+            }
+
+            .menu-section__title-container {
+                color: $light-orange;
             }
         }
     }
