--- a/scss/components/order.scss
+++ b/scss/components/order.scss
@@ -24,7 +24,7 @@
     margin-right: rem(20px);
 
     &:last-child {
-      margin-right: rem(20px);
+      margin-right: rem(0px);
 
       @include tablets {
         margin-right: 0;
@@ -58,6 +58,7 @@
     &--radio {
       display: flex;
       align-items: center;
+      flex: none;
 
       .order__input {
         width: auto;
