--- a/css/main.css
+++ b/css/main.css
@@ -1034,6 +1034,11 @@ table {
 .menu-section__item {
   display: flex;
 }
+@media screen and (max-width: 480px) {
+  .menu-section__item--active .close-btn {
+    display: block;
+  }
+}
 @media screen and (max-width: 768px) {
   .menu-section__item--active {
     position: absolute;
@@ -1053,7 +1058,7 @@ table {
 }
 @media screen and (max-width: 768px) {
   .menu-section__item--active .menu-section__text {
-    padding: 1.4285714286rem 1.4285714286rem;
+    padding: 5.7142857143rem 2.8571428571rem;
   }
 }
 .menu-section__item--active .menu-section__title-container {
@@ -1062,6 +1067,7 @@ table {
 .menu-section__text {
   width: 0rem;
   background-color: #0000008f;
+  position: relative;
 }
 
 .title--menu-section {
@@ -1254,6 +1260,46 @@ table {
 }
 .btn--black .btn__link:hover {
   background-color: #1f2122;
+}
+
+.close-btn {
+  position: absolute;
+  right: 0.7142857143rem;
+  top: 1.4285714286rem;
+  border: none;
+  width: 30px;
+  height: 30px;
+  transition: all 0.3s;
+  display: none;
+  opacity: 0.5;
+}
+
+.close-btn:hover {
+  opacity: 1;
+}
+
+.close-btn:before {
+  content: "";
+  background-color: white;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  top: 40%;
+  transform: rotate(45deg);
+  transition: all 0.3s;
+  border-radius: 4px;
+}
+
+.close-btn:after {
+  content: "";
+  background-color: white;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  top: 40%;
+  transform: rotate(-45deg);
+  transition: all 0.3s;
+  border-radius: 4px;
 }
 
 .hamburger-menu {
