--- a/scss/components/buttons.scss
+++ b/scss/components/buttons.scss
@@ -68,4 +68,45 @@
     }
   }
 }
+
+.close-btn {
+  position: absolute;
+  right: rem(10px);
+  top: rem(20px);
+  border: none;
+  width: 30px;
+  height: 30px;
+  transition: all .3s;
+  display: none;
+  opacity: 0.5;
+}
+
+.close-btn:hover {
+  opacity: 1;
+}
+
+.close-btn:before {
+  content: "";
+  background-color: white;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  top: 40%;
+  transform: rotate(45deg);
+  transition: all .3s;
+  border-radius: 4px;
+}
+
+.close-btn:after {
+  content: "";
+  background-color: white;
+  width: 100%;
+  height: 5px;
+  position: absolute;
+  top: 40%;
+  transform: rotate(-45deg);
+  transition: all .3s;
+  border-radius: 4px;
+}
   
+
