сверстана секция слайдера и меню-гамбургер, обеспечен функционал

--- a/scss/components/hamburger-menu.scss
+++ b/scss/components/hamburger-menu.scss
@@ -8,9 +8,11 @@
 
 	@include tablets {
 		display: flex;
+		z-index: 999999;
 	}
 
-	&:hover {
+	&--active {
+
 		.hamburger-menu__link:after {
 			transform: rotate(-45deg);
 			transition: all .3s;
@@ -56,6 +58,7 @@
 				position: absolute;
 				top: -10px;
 				left: 0;
+				transition: all .3s;
 			}
 
 			&:after {
@@ -67,6 +70,7 @@
 				position: absolute;
 				top: 10px;
 				left: 0;
+				transition: all .3s;
 			}
 		}
 
