--- a/css/main.css
+++ b/css/main.css
@@ -214,6 +214,11 @@ body {
   }
 }
 
+.body--active {
+  height: 100vh;
+  overflow: hidden;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -349,6 +354,10 @@ table {
   width: 100%;
   margin-bottom: 3.5714285714rem;
 }
+.title--slider {
+  color: white;
+  margin-bottom: 3.5714285714rem;
+}
 @media screen and (max-width: 768px) {
   .title {
     text-align: center;
@@ -357,6 +366,11 @@ table {
 
 .arrow-down__svg {
   fill: white;
+}
+
+.slider__svg--buns,
+.slider__svg--cheese {
+  fill: #eb8c38;
 }
 
 .header {
@@ -372,6 +386,7 @@ table {
 
 .header__left {
   padding-right: 4.6428571429rem;
+  z-index: 999999;
 }
 
 .logo__link {
@@ -390,12 +405,28 @@ table {
 
 @media screen and (max-width: 768px) {
   .primary-menu {
-    display: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    background-color: #2f3234;
+    z-index: 99999;
+    opacity: 0;
+    transition: all 0.3s;
   }
 }
 .primary-menu__list {
   display: flex;
   justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .primary-menu__list {
+    flex-direction: column;
+  }
 }
 .primary-menu__item {
   font-size: 1rem;
@@ -407,6 +438,12 @@ table {
   display: flex;
   justify-content: space-around;
 }
+@media screen and (max-width: 768px) {
+  .primary-menu__item {
+    flex-direction: column;
+    align-items: center;
+  }
+}
 .primary-menu__item:after {
   content: "•";
 }
@@ -415,6 +452,10 @@ table {
 }
 .primary-menu__link {
   color: inherit;
+}
+
+.primary-menu--active {
+  opacity: 1;
 }
 
 .about {
@@ -1313,19 +1354,20 @@ table {
 @media screen and (max-width: 768px) {
   .hamburger-menu {
     display: flex;
+    z-index: 999999;
   }
 }
-.hamburger-menu:hover .hamburger-menu__link:after {
+.hamburger-menu--active .hamburger-menu__link:after {
   transform: rotate(-45deg);
   transition: all 0.3s;
   top: 0;
 }
-.hamburger-menu:hover .hamburger-menu__link:before {
+.hamburger-menu--active .hamburger-menu__link:before {
   transform: rotate(45deg);
   transition: all 0.3s;
   top: 0;
 }
-.hamburger-menu:hover .hamburger-menu__line {
+.hamburger-menu--active .hamburger-menu__line {
   transform: translateX(50px);
 }
 .hamburger-menu__line {
@@ -1354,6 +1396,7 @@ table {
   position: absolute;
   top: -10px;
   left: 0;
+  transition: all 0.3s;
 }
 .hamburger-menu__link:after {
   content: "";
@@ -1364,6 +1407,7 @@ table {
   position: absolute;
   top: 10px;
   left: 0;
+  transition: all 0.3s;
 }
 
 .video-bg {
@@ -1372,4 +1416,278 @@ table {
   left: 0;
   min-width: 100%;
   min-height: 100%;
+}
+
+.slider {
+  background: linear-gradient(to top, #f9b43b, #eb8c38, #f9b43b);
+  color: white;
+}
+.slider .close-btn {
+  right: 1.5rem;
+  top: 1rem;
+}
+.slider .close-btn:before, .slider .close-btn:after {
+  background-color: #e45028;
+}
+.slider__list {
+  display: flex;
+  flex-wrap: nowrap;
+}
+@media screen and (max-width: 768px) {
+  .slider__list {
+    max-width: 100%;
+    padding: 1.4285714286rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .slider__list {
+    padding: 1rem;
+    max-width: 100%;
+  }
+}
+.slider__item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 768px) {
+  .slider__item {
+    flex-wrap: wrap;
+  }
+}
+@media screen and (max-width: 480px) {
+  .slider__item {
+    padding: 4.2857142857rem 0;
+  }
+}
+.slider__picture {
+  display: flex;
+  position: relative;
+  flex: 1 1 50%;
+}
+@media screen and (max-width: 768px) {
+  .slider__picture {
+    height: 45%;
+    align-items: flex-end;
+    justify-content: center;
+  }
+}
+.slider__img {
+  margin: auto;
+  max-width: 90%;
+  display: block;
+}
+.slider__kkal {
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  bottom: -60px;
+}
+@media screen and (max-width: 768px) {
+  .slider__kkal {
+    top: 0;
+    right: 0;
+  }
+}
+.slider__kkal-number, .slider__kkal-title {
+  font-family: "Gagalin", sans-serif;
+  font-size: 1.4285714286rem;
+}
+.slider__kkal-number {
+  position: absolute;
+  top: 20px;
+  left: 14px;
+}
+.slider__kkal-title {
+  font-size: 1rem;
+  text-align: center;
+  position: absolute;
+  top: 60px;
+  width: 100%;
+}
+.slider__btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #e4502863;
+  border: none;
+  width: 6.4285714286rem;
+  height: 6.4285714286rem;
+  border-radius: 10%;
+  transition: all 0.3s;
+}
+.slider .slider__composition-list {
+  width: 20rem;
+  position: absolute;
+  transition: all 0.3s;
+  opacity: 0;
+  top: 0;
+  left: 100%;
+  background-color: #ffffffe6;
+  border-radius: 10px;
+  display: flex;
+  flex-wrap: wrap;
+  color: black;
+  z-index: 9999;
+}
+@media screen and (max-width: 768px) {
+  .slider .slider__composition-list {
+    width: 40vh;
+  }
+}
+@media screen and (max-width: 480px) {
+  .slider .slider__composition-list {
+    width: auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .slider .slider__composition-list .close-btn {
+    display: block;
+  }
+}
+.slider__burger-icon {
+  width: 50px;
+  height: 40px;
+  margin: 0 1.4285714286rem;
+}
+@media screen and (max-width: 480px) {
+  .slider__burger-icon {
+    margin: 0;
+    margin-right: 1.4285714286rem;
+  }
+}
+.slider__composition-item {
+  display: flex;
+  margin: 1rem 2rem 1rem 1rem;
+  align-items: center;
+  flex: 1 1 100%;
+}
+@media screen and (max-width: 768px) {
+  .slider__composition-item {
+    max-width: 70%;
+    margin: 1rem 2rem 0.5rem 1rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .slider__composition-item {
+    max-width: 90%;
+  }
+}
+.slider__composition-text {
+  flex: 1;
+}
+@media screen and (max-width: 480px) {
+  .slider__composition-text {
+    margin-right: 1.4285714286rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  .slider__composition-weight {
+    width: 2.5rem;
+    margin-right: 3rem;
+  }
+}
+.slider__burger-menu {
+  position: absolute;
+  top: -6.4285714286rem;
+  transition: all 0.3s;
+  width: 6.4285714286rem;
+  height: 6.4285714286rem;
+}
+@media screen and (max-width: 768px) {
+  .slider__burger-menu {
+    top: 0;
+    left: 0;
+  }
+}
+.slider__burger-menu:hover {
+  transition: all 0.3s;
+}
+.slider__burger-menu:hover .slider__composition-list {
+  display: flex;
+  transition: all 0.3s;
+  opacity: 1;
+}
+.slider__burger-menu:hover .slider__btn {
+  cursor: pointer;
+  background-color: #e45028;
+  transition: all 0.3s;
+}
+.slider__burger-menu--active {
+  transition: all 0.3s;
+}
+.slider__burger-menu--active .slider__composition-list {
+  display: flex;
+  transition: all 0.3s;
+  opacity: 1;
+}
+.slider__burger-menu--active .slider__btn {
+  cursor: pointer;
+  background-color: #e45028;
+  transition: all 0.3s;
+}
+.slider__content {
+  flex: 1 1 40%;
+}
+@media screen and (max-width: 768px) {
+  .slider__content {
+    height: 50%;
+    text-align: center;
+  }
+}
+.slider__description {
+  margin-bottom: 2.5rem;
+  line-height: calc(24/14);
+}
+.slider__action {
+  display: flex;
+  align-items: flex-end;
+}
+@media screen and (max-width: 768px) {
+  .slider__action {
+    justify-content: center;
+  }
+}
+.slider__price, .slider__currency {
+  font-family: "Gagalin", sans-serif;
+  color: #e45028;
+  line-height: 1.5;
+}
+.slider__price {
+  font-size: 4rem;
+  margin-right: 1rem;
+  line-height: 1.1;
+}
+.slider__currency {
+  font-size: 2.1428571429rem;
+  margin-right: 2rem;
+}
+.slider__arrow {
+  width: 25%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+@media screen and (max-width: 480px) {
+  .slider__arrow {
+    position: absolute;
+    width: 10%;
+    height: 100%;
+  }
+}
+.slider__arrow--left .arrow-down__svg {
+  transform: rotate(90deg);
+}
+@media screen and (max-width: 480px) {
+  .slider__arrow--left {
+    left: 0;
+  }
+}
+.slider__arrow--right .arrow-down__svg {
+  transform: rotate(-90deg);
+}
+@media screen and (max-width: 480px) {
+  .slider__arrow--right {
+    right: 0;
+  }
 }
