--- a/scss/components/primary-menu.scss
+++ b/scss/components/primary-menu.scss
@@ -1,11 +1,26 @@
 .primary-menu {
     @include tablets {
-      display: none;;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      position: fixed;
+      background-color: #2f3234;
+      z-index: 99999;
+      opacity: 0;
+      transition: all .3s;
     }
 
     &__list {
       display: flex;
       justify-content: space-between;
+
+      @include tablets {
+          flex-direction: column;
+      }
     }
     &__item {
       @include uppercase-font(white);
@@ -13,6 +28,11 @@
       flex: 1 1 auto;
       display: flex;
       justify-content: space-around;
+
+      @include tablets {
+        flex-direction: column;
+        align-items: center;
+      }
     }
     &__item:after {
       content: "•";
@@ -24,4 +44,9 @@
       color: inherit;
     }
   }
+
+  .primary-menu--active {
+    opacity: 1;
+  }
+
   
