--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,3 +23,4 @@
 @import './components/buttons';
 @import './components/hamburger-menu';
 @import './components/video-bg';
+@import './components/slider';
