--- a/scss/components/primary-menu.scss
+++ b/scss/components/primary-menu.scss
@@ -6,12 +6,11 @@
       width: 100%;
       height: 100%;
       top: 0;
-      left: 0;
+      left: 100%;
       position: fixed;
       background-color: #2f3234;
       z-index: 99999;
-      opacity: 0;
-      transition: all .3s;
+      transition: .3s;
     }
 
     &__list {
@@ -46,7 +45,24 @@
   }
 
   .primary-menu--active {
-    opacity: 1;
+    left: 0;
+  }
+
+  .primary-menu--animated-close {
+    animation: opacity .3s forwards;
+  }
+
+
+
+  @keyframes opacity {
+    0% {
+      visibility: visible;
+      opacity: 1;
+    }
+    100%{
+      opacity: 0;
+      visibility: hidden;
+    }
   }
 
   
