--- a/scss/components/slider.scss
+++ b/scss/components/slider.scss
@@ -92,6 +92,8 @@
 
    &__btn {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #e4502863;
@@ -101,6 +103,12 @@
     border-radius: 10%;
     transition: all .3s;
   }
+
+  &__btn-desc{
+    font-family: "Gagalin", sans-serif;
+    font-size: 1rem;
+  }
+
   .slider__composition-list {
     width: 20rem;
     position: absolute;
@@ -114,6 +122,7 @@
     flex-wrap: wrap;
     color: black;
     z-index: 9999;
+    visibility: hidden;
 
     @include tablets {
       width: 40vh;
@@ -192,6 +201,7 @@
         display: flex;
         transition: all .3s;
         opacity: 1;
+        visibility: visible;
       }
 
       .slider__btn {
@@ -263,6 +273,7 @@
 
   &__arrow {
     width: 25%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
