--- a/scss/components/slider.scss
+++ b/scss/components/slider.scss
@@ -14,14 +14,13 @@
   &__list {
     display: flex;
     flex-wrap: nowrap;
+    overflow: hidden;
 
     @include tablets {
       max-width: 100%;
-    padding: rem(20px);
     }
 
     @include mobile {
-      padding: 1rem;
       max-width: 100%;
     }
   }
@@ -30,6 +29,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex: 0 0 100%;
+    position: relative;
 
     @include tablets {
       flex-wrap: wrap;
@@ -42,11 +43,10 @@
 
   &__picture {
     display: flex;
-    position: relative;
     flex: 1 1 50%;
 
     @include tablets {
-      height: 45%;
+      height: auto;
       align-items: flex-end;
       justify-content: center;
     }
@@ -62,7 +62,7 @@
     position: absolute;
     width: 60px;
     height: 60px;
-    bottom: -60px;
+    bottom: 0;
 
     @include tablets {
       top: 0;
@@ -184,7 +184,7 @@
 
   &__burger-menu {
     position: absolute;
-    top: rem(-90px);
+    top: 0;
     transition: all .3s;
     width: rem(90px);
     height: rem(90px); 
@@ -233,7 +233,7 @@
     flex: 1 1 40%;
 
     @include tablets {
-      height: 50%;
+      //height: 50%;
       text-align: center;
     }
   }
@@ -254,6 +254,15 @@
 
   }
 
+  &__carousel {
+    flex-wrap: nowrap;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 100%;
+  }
+
   &__price,
   &__currency {
     font-family: "Gagalin", sans-serif;
@@ -271,9 +280,14 @@
     margin-right: 2rem;
   }
 
+  &__wrap {
+    flex: 1;
+    overflow: hidden;
+  }
+
   &__arrow {
-    width: 25%;
-    height: 100%;
+    width: 10%;
+    height: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
