--- a/scss/components/order.scss
+++ b/scss/components/order.scss
@@ -46,10 +46,15 @@
     }
   }
 
+  &__error {
+    color: red;
+  }
+
   &__block {
     flex: 1;
     margin-right: rem(20px);
     color: inherit;
+
   
     &:last-child {
       margin-right: 0;
